# mentoring-fastapi

./: README.md  pyproject.toml
src/mentoring_fastapi/: __init__.py  main.py  schemas.py
src/tests/api/: conftest.py  test_main.py
