[project]
name = "mentoring-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
