[project]
name = "mentoring-fastapi"
version = "0.0.1"
description = "A simple project to facilitate mentoring/pair programming and learn about project configuration and python typing."
readme = "README.md"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
